# file-lang

./: .gitmodules  Cargo.toml  README.md  test.sh
examples/: access.fl  branches.fl  hello.fl  objects.fl
src/: compile.rs  main.rs  vm.rs
src/common/: binding.rs  builtins.rs  mod.rs  span.rs  util.rs  visit.rs
src/compile/: ast_to_ir.rs  binding.rs  bindings.rs  builtins.rs  collect.rs  constant.rs  context.rs  error.rs  ir.rs  mod.rs  object.rs  pool.rs  thunk.rs  translate.rs
src/compile/collect/: ast.rs  builtins.rs  mod.rs
src/compile/context/: ast.rs  ir.rs  mod.rs
src/compile/translate/: ast.rs  ast_to_ir.rs  collect.rs  constant.rs  ir.rs  ir_to_inst.rs  mod.rs
src/syn/: ast.rs  common.rs  error.rs  lexer.rs  mod.rs  op.rs  parser.rs  token.rs  visit.rs
src/vm/: artifact.rs  fun.rs  inst.rs  mod.rs  object.rs  pool.rs  stack.rs  stack_frame.rs  state.rs  storage.rs  store.rs  value.rs
src/vm/object/: base.rs  fun.rs  mod.rs  string.rs  ty.rs
tests/splat/: branches.fl.splat  loops.fl.splat  test.sh
