[package]
name = "file-lang"
version = "0.1.0"
authors = ["Alek Ratzloff <alekratz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.5.0"
matches = "0.1.8"
lazy_static = "1.4.0"
maplit = "1.0.2"
